[gd_scene load_steps=4 format=3 uid="uid://ccyai8h1rahon"]

[ext_resource type="Script" path="res://code/HUD/main_menu.gd" id="1_qv7p6"]
[ext_resource type="Texture2D" uid="uid://c3xl72q06tje5" path="res://assets/backgrounds/cenario.png" id="2_pn3gl"]
[ext_resource type="Texture2D" uid="uid://d3vtaiko0w7y1" path="res://assets/sprites/AzentTower.png" id="2_shwb0"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qv7p6")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_pn3gl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 280.0
offset_top = 16.0
offset_right = 2200.0
offset_bottom = 1096.0
scale = Vector2(0.293256, 0.293256)
texture = ExtResource("2_shwb0")
stretch_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 224.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
alignment = 1

[node name="btnArcade" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Arcade Mode"

[node name="btnEndless" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Endless Mode"

[node name="btnCredits" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="btnOptions" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="lblSeed" type="Label" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Seed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="txtSeed" type="TextEdit" parent="BoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
scroll_fit_content_height = true

[connection signal="pressed" from="BoxContainer/VBoxContainer/btnArcade" to="." method="_on_btn_arcade_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/btnEndless" to="." method="_on_btn_endless_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/btnCredits" to="." method="_on_btn_credits_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/btnOptions" to="." method="_on_btn_options_pressed"]
[connection signal="text_changed" from="BoxContainer/VBoxContainer/txtSeed" to="." method="_on_txt_seed_text_changed"]
